 <resources>
    <string name="app_name">Fragrance Store</string>
    <string name="login_page">Login page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?  </string>
    <string name="sign_up">Sign Up</string>
    <string name="description_page">Description page</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="already_have_an_account">Already have an account?  </string>
    <string name="welcome_to_fragrance_store">Welcome to Fragrance Store</string>
    <string name="main_page">Main page</string>
    <string name="registration">Registration</string>
    <string name="store_description">Whether you are shopping for delightfully scented, more affordable fragrances or are ready to splurge on luxury perfumes, we have you covered.</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fragrance Store</string>
    <string name="nav_header_subtitle">fragrance.store@gmail.com</string>
    <string name="nav_header_desc">Navigation store header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_for_a_fragrance">Search for a fragrance</string>
    <string name="brand">Brand:</string>
    <string name="nameSearch">Name:</string>
    <string name="concentration">Concentration:</string>
    <string name="quantity">Quantity:</string>
     <string name="search">Search</string>
     <string name="fragrance_details">Fragrance Details</string>
     <string name="price">Price:</string>
     <string name="price_per_100ml">Price per 100ml:</string>
     <string name="base_notes">Base Notes:</string>
     <string name="mid_notes">Mid Notes:</string>
     <string name="top_notes">Top Notes:</string>
     <string name="buy">Buy</string>
     <string name="update_user_details">Update user details</string>
     <string name="delete_account">Delete account</string>
     <string name="save">Save</string>
     <string name="search_another_fragrance">Search for another fragrance</string>
 </resources>