<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_page" />

    <EditText
        android:id="@+id/name_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/name"
        android:autofillHints="Write your name here"
        android:inputType="text"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/surname_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/surname"
        android:autofillHints="Write your surname here"
        android:inputType="text"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_reg"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/address_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/address"
        android:autofillHints="Write your address here"
        android:inputType="text"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_reg"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/account"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/email"
        android:autofillHints="Write your email here"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_reg"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/keylog"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/password"
        android:autofillHints="Write your password here"
        android:fontFamily="@font/frank_ruhl"
        android:inputType="textPassword"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/frank_ruhl"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:backgroundTint="@color/darkBrown"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <TextView
        android:id="@+id/alreadyAccountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/frank_ruhl"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_btn"
        app:layout_constraintVertical_bias=".2" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="@color/darkBrown"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/alreadyAccountView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/alreadyAccountView"
        app:layout_constraintTop_toTopOf="@+id/alreadyAccountView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>