<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/login_page" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/account"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/email"
        android:autofillHints="Write your email address here"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_img"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/keylog"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="@string/password"
        android:autofillHints="Write your password here"
        android:fontFamily="@font/frank_ruhl"
        android:inputType="textPassword"
        android:textColor="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/frank_ruhl"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/noAccountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:fontFamily="@font/frank_ruhl"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_btn"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".4"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/frank_ruhl"
        android:textColor="@color/darkBrown"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/noAccountView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/noAccountView"
        app:layout_constraintTop_toTopOf="@+id/noAccountView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>