<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/frank_ruhl"
        android:text="@string/search_for_a_fragrance"
        android:textColor="@color/darkBrown"
        android:textStyle="bold"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/brandText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/frank_ruhl"
            android:gravity="center"
            android:text="@string/brand"
            android:textColor="@color/darkBrown"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/brandSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/frank_ruhl"
            android:minHeight="48dp"
            android:layout_marginStart="10dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/darkBrown"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/frank_ruhl"
            android:gravity="center"
            android:text="@string/nameSearch"
            android:textColor="@color/darkBrown"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/frank_ruhl"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:inputType="text"
            android:autofillHints="Name of the fragrance"
            android:textColor="@color/darkBrown"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/concentrationText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/frank_ruhl"
        android:gravity="center"
        android:text="@string/concentration"
        android:textColor="@color/darkBrown"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/concentrationSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/frank_ruhl"
        android:minHeight="48dp"
        android:layout_marginStart="10dp"
        android:spinnerMode="dropdown"
        android:textColor="@color/darkBrown"
        tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/frank_ruhl"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/darkBrown"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/quantitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/frank_ruhl"
            android:minHeight="48dp"
            android:layout_marginStart="10dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/darkBrown"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:fontFamily="@font/frank_ruhl"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkBrown" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkBrown"
        android:fontFamily="@font/frank_ruhl"
        android:text="@string/update_user_details"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkBrown"
        android:fontFamily="@font/frank_ruhl"
        android:text="@string/delete_account"
        android:textAllCaps="false"
        android:textStyle="bold" />

</LinearLayout>